@@ -1,3 +1,8 @@
+2010-08-13  Stuart Cassoff  <stwo@users.sourceforge.net>
+
+	* unix/tclUnixCompat.c: [Bug 3555454] Rearrange a bit
+	to quash 'declared but never defined' compiler warnings.
+
 2012-08-08  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclfileName.c: [Bug #1536227]: Cygwin network pathname
